--- a/IntershipTutor/WebContent/WEB-INF/web.xml
+++ b/IntershipTutor/WebContent/WEB-INF/web.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd" version="3.1">
+  
   <servlet>
-    <servlet-name>Test</servlet-name>
+	<servlet-name>Test</servlet-name>
     <servlet-class>servlet.WebApp</servlet-class>
   </servlet>
   <servlet-mapping>
@@ -9,12 +10,14 @@
     <url-pattern>/test</url-pattern>
   </servlet-mapping>
   <display-name>test</display-name>
-  <welcome-file-list>
-    <welcome-file>index.html</welcome-file>
-    <welcome-file>index.htm</welcome-file>
-    <welcome-file>index.jsp</welcome-file>
-    <welcome-file>default.html</welcome-file>
-    <welcome-file>default.html</welcome-file>
-    <welcome-file>default.jsp</welcome-file>
-  </welcome-file-list>
+  <resource-ref>
+    <description>DB Connection</description>
+    <res-ref-name>jdbc/intershiptutor_database</res-ref-name>
+    <res-type>javax.sql.DataSource</res-type>
+    <res-auth>Container</res-auth>
+   </resource-ref>
+   <welcome-file-list>
+	<welcome-file>templates/index.ftl.html</welcome-file>
+   </welcome-file-list>
+    
 </web-app>
