--- a/IntershipTutor/WebContent/WEB-INF/web.xml
+++ b/IntershipTutor/WebContent/WEB-INF/web.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd" version="3.1">
   
+  <!-- Url is setted to the default page: container.ftl.html -->
   <servlet>
-	<servlet-name>Test</servlet-name>
-    <servlet-class>servlet.WebApp</servlet-class>
+	<servlet-name>HomePage</servlet-name>
+    <servlet-class>servlet.HomePage</servlet-class>
   </servlet>
   <servlet-mapping>
-    <servlet-name>Test</servlet-name>
-    <url-pattern>/test</url-pattern>
+    <servlet-name>HomePage</servlet-name>
+    <url-pattern></url-pattern>
   </servlet-mapping>
-  <display-name>test</display-name>
+  <display-name>Homepage</display-name>
   <resource-ref>
     <description>DB Connection</description>
     <res-ref-name>jdbc/intershiptutor_database</res-ref-name>
@@ -17,7 +18,7 @@
     <res-auth>Container</res-auth>
    </resource-ref>
    <welcome-file-list>
-	<welcome-file>templates/index.ftl.html</welcome-file>
+	<welcome-file>templates/container.ftl.html</welcome-file>
    </welcome-file-list>
     
 </web-app>
