--- a/IntershipTutor/WebContent/WEB-INF/web.xml
+++ b/IntershipTutor/WebContent/WEB-INF/web.xml
@@ -33,8 +33,8 @@
         <param-name>view.error_template</param-name>
         <param-value>errore.ftl.html</param-value>
     </context-param>
-    
   <!-- End context parameters -->
+  
   <!-- Servlets -->
 	<servlet>
 		<servlet-name>HomePage</servlet-name>
@@ -48,6 +48,10 @@
 		<servlet-name>DettaglioOffertaTirocinio</servlet-name>
 		<servlet-class>controller.DettaglioOffertaTirocinio</servlet-class>
 	</servlet>
+	<servlet>
+		<servlet-name>Login</servlet-name>
+		<servlet-class>controller.Login</servlet-class>
+	</servlet>
 	<servlet-mapping>
 		<servlet-name>HomePage</servlet-name>
 		<url-pattern></url-pattern>
@@ -60,7 +64,11 @@
 		<servlet-name>DettaglioOffertaTirocinio</servlet-name>
 		<url-pattern>/offertaTirocinio</url-pattern>
 	</servlet-mapping>
-  <!-- End servlets -->
+	<servlet-mapping>
+		<servlet-name>Login</servlet-name>
+		<url-pattern>/login</url-pattern>
+	</servlet-mapping>
+    <!-- End servlets -->
  
 	<resource-ref>
 		<description>DB Connection</description>
@@ -68,6 +76,15 @@
 		<res-type>javax.sql.DataSource</res-type>
 		<res-auth>Container</res-auth>
 	</resource-ref>
+	
+	<!-- Session config -->
+	<session-config>
+        <session-timeout>
+            30
+        </session-timeout>
+    </session-config>
+	<!-- End session config -->
+	
 	<welcome-file-list>
 		<welcome-file>homepage</welcome-file>
 	</welcome-file-list>
