--- a/IntershipTutor/WebContent/WEB-INF/web.xml
+++ b/IntershipTutor/WebContent/WEB-INF/web.xml
@@ -52,6 +52,10 @@
 		<servlet-name>Login</servlet-name>
 		<servlet-class>controller.Login</servlet-class>
 	</servlet>
+	<servlet>
+		<servlet-name>Logout</servlet-name>
+		<servlet-class>controller.Logout</servlet-class>
+	</servlet>
 	<servlet-mapping>
 		<servlet-name>HomePage</servlet-name>
 		<url-pattern></url-pattern>
@@ -67,6 +71,10 @@
 	<servlet-mapping>
 		<servlet-name>Login</servlet-name>
 		<url-pattern>/login</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>Logout</servlet-name>
+		<url-pattern>/logout</url-pattern>
 	</servlet-mapping>
     <!-- End servlets -->
  
