--- a/IntershipTutor/WebContent/WEB-INF/web.xml
+++ b/IntershipTutor/WebContent/WEB-INF/web.xml
@@ -31,7 +31,7 @@
     </context-param>
     <context-param>  
         <param-name>view.error_template</param-name>
-        <param-value>errore.ftl.html</param-value>
+        <param-value>errors/errore.ftl.html</param-value>
     </context-param>
   <!-- End context parameters -->
   
@@ -132,5 +132,15 @@
 	<welcome-file-list>
 		<welcome-file>homepage</welcome-file>
 	</welcome-file-list>
+	
+	<!-- Error pages -->
+	<error-page>
+        <error-code>404</error-code>
+        <location>/templates/errors/errore_404.ftl.html</location>
+    </error-page>
+    <error-page>
+        <error-code>500</error-code>
+        <location>/templates/errors/errore_500.ftl.html</location>
+    </error-page>
     
 </web-app>
